syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package auth;

// Сервис аутентификации и управления пользователями
service AuthService {
  rpc SignIn (SignInRequest) returns (AuthResponse) {}
  rpc SignUp (SignUpRequest) returns (AuthResponse) {}
  rpc FindAllUsers (FindAllUsersRequest) returns (UserListResponse) {}
  rpc GetProfile (google.protobuf.UInt32Value) returns (User) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  UserName name = 3;
  optional uint32 role_id = 4;
}

message UserName {
  string first_name = 1;
  string last_name = 2;
  optional string middle_name = 3;
}

message AuthResponse {
  string access_token = 1;
}

message UserListResponse {
  repeated User users = 1;
}

message User {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  optional string middle_name = 4;
  string email = 5;
  uint32 role_id = 6;
}

message Error { 
  string message = 1;
  uint32 code = 2;     
  optional string stack_trace = 3;
}

message FindAllUsersRequest {
  optional string name_filter = 1;
}
